created sessions controller and users controller
Co-Authored-By: Joseph Budina <joebud3@gmail.com>

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,10 @@
 <h1>LEVEL</h1>
 <p>mission goes here<p>
 <%= link_to 'Dashboard', dashboard_index_path %>
+
+<center>
+  <section class="login-form">
+    <%= render partial: "/shared/login" %>
+    <%= link_to 'New to Viewing Party? Register Here', register_path %>
+  </section>
+</center>
