--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -1,9 +1,1 @@
-<%= form_with url: login_path, method: :post, local:true do |form| %>
-  <%= form.label :username, "Username:" %>
-  <%= form.text_field :username, required:true, class: "form-control", id: "username"%>
-  <%= form.label :password, "Password:" %>
-  <%= form.password_field :password, required: true, class: "form-control" %>
-  <%= form.check_box :remember_me, id: "remember_me" %>
-  <%= form.label :remember_me, "Remember Me"%><br>
-  <%= form.submit "Log In", id: "submit" %>
-<% end %>
+<%= button_to "Log in with Google", "auth/google_oauth2" %>
