--- a/app/views/shared/_registration.html.erb
+++ b/app/views/shared/_registration.html.erb
@@ -11,6 +11,9 @@
       <div class="form-group">
         <%= f.text_field :bio, {class:"form-control", placeholder:"Enter Artist Bio"} %>
       </div>
+      <div class="form-group">
+        <%= f.file_field :picture_url, {class:"form-control", placeholder:"Add a Photo"} %>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col text-center">
