--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,22 @@
 	<h3><%= @user.username %>'s profile</h3>
 	<section id="artist-bio">
 		<!-- 
-		COMMENT THIS LINK OUT, ITS JUST FOR TESTING 
+		REMOVE THIS LINK ONCE FUNCTIONALITY IS IMPLEMENTED, ITS JUST FOR TESTING 
 		 -->
-		<p>Link to other page  <%= link_to("other shit", profile_path(lookup: "#{User.first.id}")) %> </p>
+		<p>Link to other page  <%= link_to("other profile", profile_path(lookup: "10000001")) %> </p>
+		<% if @user.id == @current_user.id %>
+			<section id="distance">
+					<p>You are 0 miles from yourself</p>
+			</section>
+
+		<% else %>
+			<section id="distance">
+					<p><%= @distance %> miles from you</p>
+			</section>
+		<% end %>
+
 		<h4>Artist Bio</h4>
+
 		<% if @user.bio.empty? %>
 			<p>Nothing to see here!</p>
 			<% else %>
