--- a/app/views/shared/_registration.html.erb
+++ b/app/views/shared/_registration.html.erb
@@ -1,7 +1,7 @@
 
 <section>
   <div class="container p-3 my-3 border">
-    <%= form_with model: @user, local: true do |f| %>
+    <%= form_with url: '/register', method: :post, local: true do |f| %>
       <div class="form-group">
         <%= f.text_field :username, {class:"form-control", placeholder:"Enter Blog Name"} %>
       </div>
