--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -78,9 +78,16 @@
 <div class="d-flex justify-content-left" id="topcornerleft">
   <div class="card text-white bg-dark mb-3" style="width: 20rem; top: 30px; Height 100%;">
     <div class="card-body">
-      <h5 class="card-title">Hello, <%= @user.first_name %></h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h5 class="card-title">My Circle</h5>
+      <h6 class="card-subtitle mb-2 text-muted">You have <%= @circle.length %> Friends!</h6>
+			<% @circle.each do |user| %>
+				<ul>
+					<li class="card-text"> <%= link_to user.username, profile_path(user) %></li>
+						<%= link_to profile_path(user) do %>
+   						<%= image_tag "#{user.picture_url}", class: "user-pic", size: "100x125" %>
+						<% end %>
+				</ul>
+			<% end %>
       <a href="#" class="card-link">Card link</a>
       <a href="#" class="card-link">Another link</a>
     </div>
