--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,35 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LevelFrontEnd</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <title>Level Front End</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
-    <%= yield %>
+    <main>
+      <script src="" integrity="" crossorigin="anonymous"></script>
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, class: name %>
+      <% end %>
+      <%= yield %>
+    </main>
+    <footer>
+      <img src="width="75px" style="margin:10px" >
+      <div>
+        <p>
+          Thank you to <a href="n"></a>  data that is used in this application.
+        </p>
+        <p>
+          Further citation information regarding the movie data used in this project can be found <a href="">here.</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
