completed created profile when user gets register.
Co-Authored-By: Kris Litman <56943408+krislitman@users.noreply.github.com>

--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -1,4 +1,4 @@
-<%# Nav Bar! %>
+<!--% Nav Bar! %-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Leve⅃</a>
@@ -18,11 +18,10 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Settings
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">settings</a></li>
+            <li><a class="dropdown-item" href=""> <%= render 'shared/edit_profile' %> </li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#"><%= link_to "Log Out", logout_path, method: :post %></a></li>
           </ul>
