--- a/app/views/shared/_registration.html.erb
+++ b/app/views/shared/_registration.html.erb
@@ -1,4 +1,4 @@
-
+<%= current_user.id %>
 <section>
   <div class="container p-3 my-3 border">
     <%= form_with model: @user, local: true do |f| %>
@@ -10,9 +10,6 @@
       </div>
       <div class="form-group">
         <%= f.text_field :bio, {class:"form-control", placeholder:"Enter Artist Bio"} %>
-      </div>
-      <div class="form-group">
-        <%= f.file_field :picture_url, {class:"form-control", placeholder:"Add a Photo"} %>
       </div>
       <div class="container">
         <div class="row">
