--- a/app/views/shared/_edit_profile.html.erb
+++ b/app/views/shared/_edit_profile.html.erb
@@ -1,15 +1,15 @@
 <center>
-<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Edit Profile</button>
+<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Upload Photos</button>
 <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Profile</h5>
+    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Photo</h5>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
     <section>
-      <% form_with model: @user, local: :true do |form| %>
-        <%= form.label 'upload your picture'%>
-        <%= form.file_field :picture %>
+      <%= form_with url: '/galleries' , local: true, method: :post do |form| %>
+        <%= form.label 'upload your profile picture'%>
+        <%= form.file_field :profile_gallery_picture %>
         <%= form.submit 'Upload' %>
       <% end %>
     </section>
