--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -16,12 +16,13 @@
         <li class="nav-item">
           <a class="nav-link" href="#">My Profile</a>
         </li>
+        <li><%= render 'shared/edit_profile' %></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Settings
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href=""> <%= render 'shared/edit_profile' %> </li>
+            <li><a class="dropdown-item" href="">  </li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#"><%= link_to "Log Out", logout_path, method: :post %></a></li>
           </ul>
