--- a/app/views/shared/_registration.html.erb
+++ b/app/views/shared/_registration.html.erb
@@ -2,22 +2,12 @@
 <section>
   <div class="container p-3 my-3 border">
     <%= form_with model: @user, local: true do |f| %>
-      <div class="form-group">
         <%= f.text_field :username, {class:"form-control", placeholder:"Enter Blog Name"} %>
-      </div>
-      <div class="form-group">
         <%= f.number_field :zip, {class:"form-control", placeholder:"Enter Zip Code"} %>
-      </div>
-      <div class="form-group">
         <%= f.text_field :bio, {class:"form-control", placeholder:"Enter Artist Bio"} %>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col text-center">
-            <%= f.submit "Register", class:"btn btn-outline-primary" %>
-          </div>
-        </div>
-      </div>
+        <%= f.label 'upload your profile picture'%>
+        <%= f.file_field :profile_gallery_picture, class:"form-control" %>
+        <%= f.submit "Register", class:"btn btn-outline-primary" %>
     <% end %>
   </div>
 </section>
