--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,3 @@
 
-<header><center>Your page needs a new name</center></header>
+<h1><center>Registration</center></h1>
 <%= render partial: "/shared/registration" %>
