Fixed VCR issues with returning users galleries
Co-authored-by: Andrew Johnston <72912074+avjohnston@users.noreply.github.com>
Co-authored-by: Ben Fulton <63377504+b-enji-cmd@users.noreply.github.com>
Co-authored-by: Jake Volpe <62768837+javolpe@users.noreply.github.com>
Co-authored-by: Khoa Nguyen <46826902+Omegaeye@users.noreply.github.com>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,13 +7,15 @@
 	<section id="artist-bio">
 		<!-- 
 		REMOVE THIS LINK ONCE FUNCTIONALITY IS IMPLEMENTED, ITS JUST FOR TESTING 
+    Lookup ID is just for testing
 		 -->
-		<p>Link to other page  <%= link_to("other profile", profile_path(lookup: "10000001")) %> </p>
+		<p>Link to other page  <%= link_to("other profile", profile_path(lookup: "2")) %> </p>
+
       <section id="distance">
-		<% if @user.id == current_user.id %>
+		<% if @user.id == @current_user.id %>
 					<p>You are 0 miles from yourself</p>
-		<% else %>
-        <!--p><%= @distance %> miles from you</p-->
+		<% else %> 
+        <p><%= @distance %> miles from you</p>
 		<% end %>
 			</section>
 
