--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,14 +1,12 @@
 <%= render 'shared/nav_bar' %>
 <%= render 'shared/edit_profile' %>
-
+<h1> <%= @user.username%> Galleries </h1>
 <div style="overflow:auto">
   <div class="row flex-row flex-nowrap">
     <% @galleries.map do |gallery| %>
       <div class="col-2">
         <div class="card">
-          <% gallery.photos.map do |img|  %>
-          <img class="card-img-top" src="<%=img.url%>" alt="picture">
-          <% end %>
+          <img class="card-img-top" src="<%=gallery.photos.first.url%>" alt="picture">
           <div class="card-body">
             <h5 class="card-title"><%= link_to gallery.name, gallery_path(gallery.id) %></h5>
             <p class="card-text"></p>
