Finish setting up and testing the dashboard
Co-authored-by: Ben Fulton <63377504+b-enji-cmd@users.noreply.github.com>
Co-authored-by: Jake Volpe <62768837+javolpe@users.noreply.github.com>
Co-authored-by: Jesus Quezada-Guillen <17693874+jequeza@users.noreply.github.com>
Co-authored-by: Joseph Budina <52386927+josephbudina@users.noreply.github.com>
Co-authored-by: Khoa Nguyen <46826902+Omegaeye@users.noreply.github.com>
Co-authored-by: Kris Litman <56943408+krislitman@users.noreply.github.com>
Co-authored-by: Kyle Schulz <54863905+kylejschulz@users.noreply.github.com>

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,68 @@
 
  @import "bootstrap";
 
+ textarea { resize: none; }
+
+ profile-img {
+  border-radius: 50%;
+}
+
+.img-circular{
+ width: 150px;
+ height: 150px;
+ background-size: cover;
+ display: block;
+ border-radius: 100px;
+ -webkit-border-radius: 100px;
+ -moz-border-radius: 100px;
+ margin-left: auto;
+ margin-right: auto;
+}
+
+.small-circular{
+ width: 50px;
+ height: 50px;
+ background-size: cover;
+ display: block;
+ // border-radius: 100px;
+ // -webkit-border-radius: 100px;
+ // -moz-border-radius: 100px;
+ // margin-left: auto;
+ // margin-right: auto;
+}
+
+.scroll {
+  max-height: 500px;
+  overflow-y: auto;
+}
+
+.scroll-2 {
+  max-height: 364px;
+  overflow-y: auto;
+}
+
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+}
+
+.textfield {
+  width: 100%;
+  height: 20px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+}
+
+body {
+ background-image: url("https://img.17qq.com/images/seceucsax.jpeg");
+}
