--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,49 +5,89 @@
 <% else %>
 
 <%= render 'shared/nav_bar' %>
+<body>
 
-<div class="topcorner">
-  <div class="card text-white bg-dark mb-3" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">Hello, <%= @user.first_name %></h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-    </div>
-  </div>
+
+<div class="container">
+	<div class="row">
+
+		<div class="col">
+
+			<div class="card text-white bg-dark mb-3 scroll-2" id="my-circle" style="max-width: 18rem;margin-top: 10px;text-align: center;">
+			  <h5 class="card-header">My Circle</h5>
+				  <div class="card-body">
+						<h6 class="card-subtitle mb-2 text-muted">You have <%= @circle.length %> friends</h6>
+						<p class="card-text"><% @circle.each do |user| %>
+							<ul>
+								<li class="card-text"> <%= link_to user.username, profile_path(user) %></li>
+									<%= link_to profile_path(user) do %>
+										<%= image_tag "#{user.profile_picture}", class: "small-circular" %>
+									<% end %>
+							</ul>
+						<% end %></p>
+						<%= button_to "Discover More Friends", discover_index_path, class: "btn btn-secondary" %>
+				  </div>
+			</div>
+		</div>
+
+
+		<div class="col-6">
+
+			<div class="card text-white bg-dark mb-3" style="max-width: 100%;margin-top: 10px;text-align: center;">
+			  <h5 class="card-header">Create Post</h5>
+				<div style="padding:5px;margin:5px">
+					<%= form_with url: new_post_path, method: :get, local: true do |f| %>
+						<%= f.label :content %><br>
+						<%= f.text_area :content, size: "70 x 4", maxlength: 168, class: "form-label", required: true %><br>
+						<%= f.label :link %><br>
+						<%= f.text_field :link, size: "66 x 1", class: "textfield" %><br><br>
+						<%= f.submit 'Create Post', class:"btn btn-secondary" %>
+					<% end %>
+				</div>
+			</div>
+
+
+
+		</div>
+
+
+		<div class="col">
+
+			<div class="card text-white bg-dark mb-3" style="max-width: 18rem;margin-top: 10px;text-align: center;">
+			  <h2 class="card-header"><%= @profile.username %></h2>
+				<div class="card-body">
+					<%= image_tag "https://coursereport-s3-production.global.ssl.fastly.net/uploads/school/logo/79/original/turing-logo-cr.png", class: "img-circular" %>
+				</div>
+			</div>
+
+		</div>
+	</div>
 </div>
-<div class="d-flex justify-content-center">
-  <div class="card text-white bg-dark mb-3" style="width: 40rem; top: 15px;">
-    <div class="card-body">
-      <h5 class="card-title">Hello, <%= @user.first_name %></h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-    </div>
-  </div>
+
+
+<div class="card text-white bg-dark mb-3 scroll" style="width: 938px;margin-top: 10px;text-align: center;margin-left: auto; margin-right: auto;" id="my-feed">
+	<h5 class="card-header"> My Feed </h5>
+		<div class="card-body">
+			<h6 class="card-subtitle mb-2 text-muted">Your Circle's Posts</h6>
+			<p class="card-text"><% @circle_posts.each do |post| %>
+					<div class="card text-dark bg-light mb-3" style="max-width: 100%;margin-left: auto; margin-right: auto;">
+						<div class="card-header"><%= link_to post.user.username, profile_path(post.user.id) %>
+							<%= link_to profile_path(post.user.id) do %>
+							<%= image_tag "#{User.find(post.user.id).picture_url}", class: "small-circular" %>
+						<% end %></div>
+						<div class="card-body">
+							<div class="card-text"><%= post.content %><br><br>
+								<% if post.link %>
+									<h6 class="card-subtitle mb-2 text-muted"> <%= link_to "#{post.link}" %> </h6>
+								<% end %>
+								<p class="card-subtitle mb-2 text-muted" style="font-size:11px"> <%= post.created_at_format %> </p>
+							</div>
+						</div>
+					</div>
+			<% end %>
+		</div>
 </div>
-<div class="d-flex justify-content-center">
-  <div class="card text-white bg-dark mb-3" style="width: 40rem; top: 30px; Height 100%;">
-    <div class="card-body">
-      <h5 class="card-title">Hello, <%= @user.first_name %></h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">gfdsgsg.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-    </div>
-  </div>
-</div>
-<div class="d-flex justify-content-left" id="topcornerleft">
-  <div class="card text-white bg-dark mb-3" style="width: 20rem; top: 30px; Height 100%;">
-    <div class="card-body">
-      <h5 class="card-title">Hello, <%= @user.first_name %></h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-    </div>
-  </div>
-</div>
+
+
 <% end %>
+</body>
