Add more styling to dashboard and gallery
Co-authored-by: Ben Fulton <63377504+b-enji-cmd@users.noreply.github.com>
Co-authored-by: Jesus Quezada-Guillen <17693874+jequeza@users.noreply.github.com>
Co-authored-by: Khoa Nguyen <46826902+Omegaeye@users.noreply.github.com>

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,6 +89,5 @@ body {
 }
 
 .background {
- background-image: "background.jpeg";
- background-color: #4D585C;
+ background-image: url('background.jpeg');
 }
