--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -21,7 +21,7 @@
                         <%= button_to gallery.name, galleries_path, params: {gallery_id: gallery.id}, method: :get, class: 'btn btn-secondary' %>
                         <p class="card-text"></p>
                       </div>
-                    </div>
+                    </div><br>
                 <% end %>
               <% end %>
 
