--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -11,10 +11,13 @@
           <a class="nav-link active" aria-current="page" href="#">Discover</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">My Galleries</a>
+          <a class="nav-link" href="/galleries">My Galleries</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">My Profile</a>
+          <a class="nav-link" href="/dashboard">My Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/profiles">My Profile</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
