--- a/app/views/shared/_edit_profile.html.erb
+++ b/app/views/shared/_edit_profile.html.erb
@@ -1,11 +1,11 @@
 <center>
-<button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Upload Photos</button>
+<button class="btn btn-outline-success form-control" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Upload Photos</button>
 <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
   <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Photo</h5>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
-  <div class="offcanvas-body">
+  <div class="offcanvas-body" style="color:black">
     <section>
       <h2><center> Create a new Gallery <center></h2>
       <%= form_with url: '/galleries' , local: true, method: :post do |form| %>
